# newsinslowfrench2anki

./: .gitignore  pyproject.toml  readme.md  settings.toml
newsinslowfrench2anki/: main.py
newsinslowfrenchdaemon/: config.py  daemon.py
