[tool.poetry]
name = "newsinslowfrenchdaemon"
version = "0.1.0"
description = ""
authors = ["Jeremy Fisher <jeremyadamsfisher@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.28.0"
dynaconf = "^3.1.11"
anki = "^2.1.54"
genanki = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pull_flashcards = "newsinslowfrenchdaemon.daemon:main"
push_flashcards = "newsinslowfrenchdaemon.parse_csv:main"
